--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Opções para parceria</title>
 
-    <link rel="stylesheet" href="./src/styles/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./src/styles/responsive.css" />
   </head>
 
@@ -68,3 +68,4 @@
     <script src="./src/scripts/script.js"></script>
   </body>
 </html>
+
