--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Opções para parceria</title>
 
-    <link rel="stylesheet" href="./src/styles/style.css" />
-    <link rel="stylesheet" href="./src/styles/responsive.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/responsive.css" />
   </head>
 
   <body>
@@ -65,7 +65,7 @@
       <p>Coded by Você</p>
     </footer>
 
-    <script src="./src/scripts/script.js"></script>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
 
