--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <h1>Lista de Imóveis</h1>
 
   <div class="filtros">
-    <input type="text" id="search-nome" placeholder="Pesquisar por nome">
-    <input type="text" id="search-bairro" placeholder="Pesquisar por bairro">
-    <input type="text" id="search-valor" placeholder="Pesquisar por valor">
-    <input type="text" id="search-tipologia" placeholder="Pesquisar por tipologia">
+    <input id="search-nome" placeholder="Pesquisar por nome">
+    <input id="search-bairro" placeholder="Pesquisar por bairro">
+    <input id="search-valor" placeholder="Pesquisar por valor">
+    <input id="search-tipologia" placeholder="Pesquisar por tipologia">
 
     <div class="acoes">
       <button id="limpar">Limpar filtros</button>
@@ -35,10 +35,6 @@
     </thead>
     <tbody id="tabela-dados"></tbody>
   </table>
-
-  <footer>
-    <p>Coded by Leonam Nery</p>
-  </footer>
 
   <script src="./scripts/script.js"></script>
 </body>
