--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <header class="topo">
-  <img src="./assets/logo-gp-imob.png" alt="GP IMOB" class="logo">
+  <img src="./assets/logo-gp-imob.png.png" alt="GP IMOB" class="logo">
   <h1>Lista de Imóveis</h1>
 </header>
 
