--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </table>
 
   <footer>
-   <p>© GP IMOB · Imóveis de Médio e Alto Padrão</p>
+   <p>© Leonam Nery</p>
   </footer>
 
   <script src="./scripts/script.js"></script>
